Iteration2/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> all
Rule 1     all -> empty
Rule 2     all -> all title
Rule 3     all -> all separator
Rule 4     all -> all paragraph
Rule 5     all -> all newline
Rule 6     all -> all tab
Rule 7     title -> POUNDSIGN CONTENTS
Rule 8     separator -> SEPARATOR
Rule 9     newline -> NEWLINE
Rule 10    tab -> TAB
Rule 11    paragraph -> sentences
Rule 12    paragraph -> paragraph sentences
Rule 13    paragraph -> paragraph LBRACKET
Rule 14    paragraph -> paragraph RBRACKET
Rule 15    paragraph -> paragraph LPAREN
Rule 16    paragraph -> paragraph RPAREN
Rule 17    paragraph -> paragraph LANGLE
Rule 18    paragraph -> paragraph RANGLE
Rule 19    paragraph -> paragraph LATICS
Rule 20    paragraph -> paragraph BOLD
Rule 21    paragraph -> paragraph CODE
Rule 22    sentences -> LATICS sentences LATICS
Rule 23    sentences -> BOLD sentences BOLD
Rule 24    sentences -> CODE sentences CODE
Rule 25    sentences -> LBRACKET sentences RBRACKET LPAREN sentences RPAREN
Rule 26    sentences -> LANGLE sentences RANGLE
Rule 27    sentences -> CONTENTS
Rule 28    empty -> <empty>

Terminals, with rules where they appear

BOLD                 : 20 23 23
CODE                 : 21 24 24
CONTENTS             : 7 27
LANGLE               : 17 26
LATICS               : 19 22 22
LBRACKET             : 13 25
LPAREN               : 15 25
NEWLINE              : 9
POUNDSIGN            : 7
RANGLE               : 18 26
RBRACKET             : 14 25
RPAREN               : 16 25
SEPARATOR            : 8
TAB                  : 10
error                : 

Nonterminals, with rules where they appear

all                  : 2 3 4 5 6 0
empty                : 1
newline              : 5
paragraph            : 4 12 13 14 15 16 17 18 19 20 21
sentences            : 11 12 22 23 24 25 25 26
separator            : 3
tab                  : 6
title                : 2

Parsing method: LALR

state 0

    (0) S' -> . all
    (1) all -> . empty
    (2) all -> . all title
    (3) all -> . all separator
    (4) all -> . all paragraph
    (5) all -> . all newline
    (6) all -> . all tab
    (28) empty -> .

    POUNDSIGN       reduce using rule 28 (empty -> .)
    SEPARATOR       reduce using rule 28 (empty -> .)
    NEWLINE         reduce using rule 28 (empty -> .)
    TAB             reduce using rule 28 (empty -> .)
    LATICS          reduce using rule 28 (empty -> .)
    BOLD            reduce using rule 28 (empty -> .)
    CODE            reduce using rule 28 (empty -> .)
    LBRACKET        reduce using rule 28 (empty -> .)
    LANGLE          reduce using rule 28 (empty -> .)
    CONTENTS        reduce using rule 28 (empty -> .)
    $end            reduce using rule 28 (empty -> .)

    all                            shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> all .
    (2) all -> all . title
    (3) all -> all . separator
    (4) all -> all . paragraph
    (5) all -> all . newline
    (6) all -> all . tab
    (7) title -> . POUNDSIGN CONTENTS
    (8) separator -> . SEPARATOR
    (11) paragraph -> . sentences
    (12) paragraph -> . paragraph sentences
    (13) paragraph -> . paragraph LBRACKET
    (14) paragraph -> . paragraph RBRACKET
    (15) paragraph -> . paragraph LPAREN
    (16) paragraph -> . paragraph RPAREN
    (17) paragraph -> . paragraph LANGLE
    (18) paragraph -> . paragraph RANGLE
    (19) paragraph -> . paragraph LATICS
    (20) paragraph -> . paragraph BOLD
    (21) paragraph -> . paragraph CODE
    (9) newline -> . NEWLINE
    (10) tab -> . TAB
    (22) sentences -> . LATICS sentences LATICS
    (23) sentences -> . BOLD sentences BOLD
    (24) sentences -> . CODE sentences CODE
    (25) sentences -> . LBRACKET sentences RBRACKET LPAREN sentences RPAREN
    (26) sentences -> . LANGLE sentences RANGLE
    (27) sentences -> . CONTENTS

    POUNDSIGN       shift and go to state 9
    SEPARATOR       shift and go to state 15
    NEWLINE         shift and go to state 3
    TAB             shift and go to state 16
    LATICS          shift and go to state 5
    BOLD            shift and go to state 18
    CODE            shift and go to state 7
    LBRACKET        shift and go to state 10
    LANGLE          shift and go to state 4
    CONTENTS        shift and go to state 17

    title                          shift and go to state 6
    newline                        shift and go to state 8
    paragraph                      shift and go to state 11
    separator                      shift and go to state 12
    tab                            shift and go to state 13
    sentences                      shift and go to state 14

state 2

    (1) all -> empty .

    POUNDSIGN       reduce using rule 1 (all -> empty .)
    SEPARATOR       reduce using rule 1 (all -> empty .)
    NEWLINE         reduce using rule 1 (all -> empty .)
    TAB             reduce using rule 1 (all -> empty .)
    LATICS          reduce using rule 1 (all -> empty .)
    BOLD            reduce using rule 1 (all -> empty .)
    CODE            reduce using rule 1 (all -> empty .)
    LBRACKET        reduce using rule 1 (all -> empty .)
    LANGLE          reduce using rule 1 (all -> empty .)
    CONTENTS        reduce using rule 1 (all -> empty .)
    $end            reduce using rule 1 (all -> empty .)


state 3

    (9) newline -> NEWLINE .

    POUNDSIGN       reduce using rule 9 (newline -> NEWLINE .)
    SEPARATOR       reduce using rule 9 (newline -> NEWLINE .)
    NEWLINE         reduce using rule 9 (newline -> NEWLINE .)
    TAB             reduce using rule 9 (newline -> NEWLINE .)
    LATICS          reduce using rule 9 (newline -> NEWLINE .)
    BOLD            reduce using rule 9 (newline -> NEWLINE .)
    CODE            reduce using rule 9 (newline -> NEWLINE .)
    LBRACKET        reduce using rule 9 (newline -> NEWLINE .)
    LANGLE          reduce using rule 9 (newline -> NEWLINE .)
    CONTENTS        reduce using rule 9 (newline -> NEWLINE .)
    $end            reduce using rule 9 (newline -> NEWLINE .)


state 4

    (26) sentences -> LANGLE . sentences RANGLE
    (22) sentences -> . LATICS sentences LATICS
    (23) sentences -> . BOLD sentences BOLD
    (24) sentences -> . CODE sentences CODE
    (25) sentences -> . LBRACKET sentences RBRACKET LPAREN sentences RPAREN
    (26) sentences -> . LANGLE sentences RANGLE
    (27) sentences -> . CONTENTS

    LATICS          shift and go to state 5
    BOLD            shift and go to state 18
    CODE            shift and go to state 7
    LBRACKET        shift and go to state 10
    LANGLE          shift and go to state 4
    CONTENTS        shift and go to state 17

    sentences                      shift and go to state 19

state 5

    (22) sentences -> LATICS . sentences LATICS
    (22) sentences -> . LATICS sentences LATICS
    (23) sentences -> . BOLD sentences BOLD
    (24) sentences -> . CODE sentences CODE
    (25) sentences -> . LBRACKET sentences RBRACKET LPAREN sentences RPAREN
    (26) sentences -> . LANGLE sentences RANGLE
    (27) sentences -> . CONTENTS

    LATICS          shift and go to state 5
    BOLD            shift and go to state 18
    CODE            shift and go to state 7
    LBRACKET        shift and go to state 10
    LANGLE          shift and go to state 4
    CONTENTS        shift and go to state 17

    sentences                      shift and go to state 20

state 6

    (2) all -> all title .

    POUNDSIGN       reduce using rule 2 (all -> all title .)
    SEPARATOR       reduce using rule 2 (all -> all title .)
    NEWLINE         reduce using rule 2 (all -> all title .)
    TAB             reduce using rule 2 (all -> all title .)
    LATICS          reduce using rule 2 (all -> all title .)
    BOLD            reduce using rule 2 (all -> all title .)
    CODE            reduce using rule 2 (all -> all title .)
    LBRACKET        reduce using rule 2 (all -> all title .)
    LANGLE          reduce using rule 2 (all -> all title .)
    CONTENTS        reduce using rule 2 (all -> all title .)
    $end            reduce using rule 2 (all -> all title .)


state 7

    (24) sentences -> CODE . sentences CODE
    (22) sentences -> . LATICS sentences LATICS
    (23) sentences -> . BOLD sentences BOLD
    (24) sentences -> . CODE sentences CODE
    (25) sentences -> . LBRACKET sentences RBRACKET LPAREN sentences RPAREN
    (26) sentences -> . LANGLE sentences RANGLE
    (27) sentences -> . CONTENTS

    LATICS          shift and go to state 5
    BOLD            shift and go to state 18
    CODE            shift and go to state 7
    LBRACKET        shift and go to state 10
    LANGLE          shift and go to state 4
    CONTENTS        shift and go to state 17

    sentences                      shift and go to state 21

state 8

    (5) all -> all newline .

    POUNDSIGN       reduce using rule 5 (all -> all newline .)
    SEPARATOR       reduce using rule 5 (all -> all newline .)
    NEWLINE         reduce using rule 5 (all -> all newline .)
    TAB             reduce using rule 5 (all -> all newline .)
    LATICS          reduce using rule 5 (all -> all newline .)
    BOLD            reduce using rule 5 (all -> all newline .)
    CODE            reduce using rule 5 (all -> all newline .)
    LBRACKET        reduce using rule 5 (all -> all newline .)
    LANGLE          reduce using rule 5 (all -> all newline .)
    CONTENTS        reduce using rule 5 (all -> all newline .)
    $end            reduce using rule 5 (all -> all newline .)


state 9

    (7) title -> POUNDSIGN . CONTENTS

    CONTENTS        shift and go to state 22


state 10

    (25) sentences -> LBRACKET . sentences RBRACKET LPAREN sentences RPAREN
    (22) sentences -> . LATICS sentences LATICS
    (23) sentences -> . BOLD sentences BOLD
    (24) sentences -> . CODE sentences CODE
    (25) sentences -> . LBRACKET sentences RBRACKET LPAREN sentences RPAREN
    (26) sentences -> . LANGLE sentences RANGLE
    (27) sentences -> . CONTENTS

    LATICS          shift and go to state 5
    BOLD            shift and go to state 18
    CODE            shift and go to state 7
    LBRACKET        shift and go to state 10
    LANGLE          shift and go to state 4
    CONTENTS        shift and go to state 17

    sentences                      shift and go to state 23

state 11

    (4) all -> all paragraph .
    (12) paragraph -> paragraph . sentences
    (13) paragraph -> paragraph . LBRACKET
    (14) paragraph -> paragraph . RBRACKET
    (15) paragraph -> paragraph . LPAREN
    (16) paragraph -> paragraph . RPAREN
    (17) paragraph -> paragraph . LANGLE
    (18) paragraph -> paragraph . RANGLE
    (19) paragraph -> paragraph . LATICS
    (20) paragraph -> paragraph . BOLD
    (21) paragraph -> paragraph . CODE
    (22) sentences -> . LATICS sentences LATICS
    (23) sentences -> . BOLD sentences BOLD
    (24) sentences -> . CODE sentences CODE
    (25) sentences -> . LBRACKET sentences RBRACKET LPAREN sentences RPAREN
    (26) sentences -> . LANGLE sentences RANGLE
    (27) sentences -> . CONTENTS

  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for LANGLE resolved as shift
  ! shift/reduce conflict for LATICS resolved as shift
  ! shift/reduce conflict for BOLD resolved as shift
  ! shift/reduce conflict for CODE resolved as shift
  ! shift/reduce conflict for CONTENTS resolved as shift
    POUNDSIGN       reduce using rule 4 (all -> all paragraph .)
    SEPARATOR       reduce using rule 4 (all -> all paragraph .)
    NEWLINE         reduce using rule 4 (all -> all paragraph .)
    TAB             reduce using rule 4 (all -> all paragraph .)
    $end            reduce using rule 4 (all -> all paragraph .)
    LBRACKET        shift and go to state 28
    RBRACKET        shift and go to state 33
    LPAREN          shift and go to state 30
    RPAREN          shift and go to state 25
    LANGLE          shift and go to state 24
    RANGLE          shift and go to state 32
    LATICS          shift and go to state 29
    BOLD            shift and go to state 26
    CODE            shift and go to state 27
    CONTENTS        shift and go to state 17

  ! LATICS          [ reduce using rule 4 (all -> all paragraph .) ]
  ! BOLD            [ reduce using rule 4 (all -> all paragraph .) ]
  ! CODE            [ reduce using rule 4 (all -> all paragraph .) ]
  ! LBRACKET        [ reduce using rule 4 (all -> all paragraph .) ]
  ! LANGLE          [ reduce using rule 4 (all -> all paragraph .) ]
  ! CONTENTS        [ reduce using rule 4 (all -> all paragraph .) ]

    sentences                      shift and go to state 31

state 12

    (3) all -> all separator .

    POUNDSIGN       reduce using rule 3 (all -> all separator .)
    SEPARATOR       reduce using rule 3 (all -> all separator .)
    NEWLINE         reduce using rule 3 (all -> all separator .)
    TAB             reduce using rule 3 (all -> all separator .)
    LATICS          reduce using rule 3 (all -> all separator .)
    BOLD            reduce using rule 3 (all -> all separator .)
    CODE            reduce using rule 3 (all -> all separator .)
    LBRACKET        reduce using rule 3 (all -> all separator .)
    LANGLE          reduce using rule 3 (all -> all separator .)
    CONTENTS        reduce using rule 3 (all -> all separator .)
    $end            reduce using rule 3 (all -> all separator .)


state 13

    (6) all -> all tab .

    POUNDSIGN       reduce using rule 6 (all -> all tab .)
    SEPARATOR       reduce using rule 6 (all -> all tab .)
    NEWLINE         reduce using rule 6 (all -> all tab .)
    TAB             reduce using rule 6 (all -> all tab .)
    LATICS          reduce using rule 6 (all -> all tab .)
    BOLD            reduce using rule 6 (all -> all tab .)
    CODE            reduce using rule 6 (all -> all tab .)
    LBRACKET        reduce using rule 6 (all -> all tab .)
    LANGLE          reduce using rule 6 (all -> all tab .)
    CONTENTS        reduce using rule 6 (all -> all tab .)
    $end            reduce using rule 6 (all -> all tab .)


state 14

    (11) paragraph -> sentences .

    LBRACKET        reduce using rule 11 (paragraph -> sentences .)
    RBRACKET        reduce using rule 11 (paragraph -> sentences .)
    LPAREN          reduce using rule 11 (paragraph -> sentences .)
    RPAREN          reduce using rule 11 (paragraph -> sentences .)
    LANGLE          reduce using rule 11 (paragraph -> sentences .)
    RANGLE          reduce using rule 11 (paragraph -> sentences .)
    LATICS          reduce using rule 11 (paragraph -> sentences .)
    BOLD            reduce using rule 11 (paragraph -> sentences .)
    CODE            reduce using rule 11 (paragraph -> sentences .)
    CONTENTS        reduce using rule 11 (paragraph -> sentences .)
    POUNDSIGN       reduce using rule 11 (paragraph -> sentences .)
    SEPARATOR       reduce using rule 11 (paragraph -> sentences .)
    NEWLINE         reduce using rule 11 (paragraph -> sentences .)
    TAB             reduce using rule 11 (paragraph -> sentences .)
    $end            reduce using rule 11 (paragraph -> sentences .)


state 15

    (8) separator -> SEPARATOR .

    POUNDSIGN       reduce using rule 8 (separator -> SEPARATOR .)
    SEPARATOR       reduce using rule 8 (separator -> SEPARATOR .)
    NEWLINE         reduce using rule 8 (separator -> SEPARATOR .)
    TAB             reduce using rule 8 (separator -> SEPARATOR .)
    LATICS          reduce using rule 8 (separator -> SEPARATOR .)
    BOLD            reduce using rule 8 (separator -> SEPARATOR .)
    CODE            reduce using rule 8 (separator -> SEPARATOR .)
    LBRACKET        reduce using rule 8 (separator -> SEPARATOR .)
    LANGLE          reduce using rule 8 (separator -> SEPARATOR .)
    CONTENTS        reduce using rule 8 (separator -> SEPARATOR .)
    $end            reduce using rule 8 (separator -> SEPARATOR .)


state 16

    (10) tab -> TAB .

    POUNDSIGN       reduce using rule 10 (tab -> TAB .)
    SEPARATOR       reduce using rule 10 (tab -> TAB .)
    NEWLINE         reduce using rule 10 (tab -> TAB .)
    TAB             reduce using rule 10 (tab -> TAB .)
    LATICS          reduce using rule 10 (tab -> TAB .)
    BOLD            reduce using rule 10 (tab -> TAB .)
    CODE            reduce using rule 10 (tab -> TAB .)
    LBRACKET        reduce using rule 10 (tab -> TAB .)
    LANGLE          reduce using rule 10 (tab -> TAB .)
    CONTENTS        reduce using rule 10 (tab -> TAB .)
    $end            reduce using rule 10 (tab -> TAB .)


state 17

    (27) sentences -> CONTENTS .

    BOLD            reduce using rule 27 (sentences -> CONTENTS .)
    CODE            reduce using rule 27 (sentences -> CONTENTS .)
    LATICS          reduce using rule 27 (sentences -> CONTENTS .)
    RPAREN          reduce using rule 27 (sentences -> CONTENTS .)
    LBRACKET        reduce using rule 27 (sentences -> CONTENTS .)
    RBRACKET        reduce using rule 27 (sentences -> CONTENTS .)
    LPAREN          reduce using rule 27 (sentences -> CONTENTS .)
    LANGLE          reduce using rule 27 (sentences -> CONTENTS .)
    RANGLE          reduce using rule 27 (sentences -> CONTENTS .)
    CONTENTS        reduce using rule 27 (sentences -> CONTENTS .)
    POUNDSIGN       reduce using rule 27 (sentences -> CONTENTS .)
    SEPARATOR       reduce using rule 27 (sentences -> CONTENTS .)
    NEWLINE         reduce using rule 27 (sentences -> CONTENTS .)
    TAB             reduce using rule 27 (sentences -> CONTENTS .)
    $end            reduce using rule 27 (sentences -> CONTENTS .)


state 18

    (23) sentences -> BOLD . sentences BOLD
    (22) sentences -> . LATICS sentences LATICS
    (23) sentences -> . BOLD sentences BOLD
    (24) sentences -> . CODE sentences CODE
    (25) sentences -> . LBRACKET sentences RBRACKET LPAREN sentences RPAREN
    (26) sentences -> . LANGLE sentences RANGLE
    (27) sentences -> . CONTENTS

    LATICS          shift and go to state 5
    BOLD            shift and go to state 18
    CODE            shift and go to state 7
    LBRACKET        shift and go to state 10
    LANGLE          shift and go to state 4
    CONTENTS        shift and go to state 17

    sentences                      shift and go to state 34

state 19

    (26) sentences -> LANGLE sentences . RANGLE

    RANGLE          shift and go to state 35


state 20

    (22) sentences -> LATICS sentences . LATICS

    LATICS          shift and go to state 36


state 21

    (24) sentences -> CODE sentences . CODE

    CODE            shift and go to state 37


state 22

    (7) title -> POUNDSIGN CONTENTS .

    POUNDSIGN       reduce using rule 7 (title -> POUNDSIGN CONTENTS .)
    SEPARATOR       reduce using rule 7 (title -> POUNDSIGN CONTENTS .)
    NEWLINE         reduce using rule 7 (title -> POUNDSIGN CONTENTS .)
    TAB             reduce using rule 7 (title -> POUNDSIGN CONTENTS .)
    LATICS          reduce using rule 7 (title -> POUNDSIGN CONTENTS .)
    BOLD            reduce using rule 7 (title -> POUNDSIGN CONTENTS .)
    CODE            reduce using rule 7 (title -> POUNDSIGN CONTENTS .)
    LBRACKET        reduce using rule 7 (title -> POUNDSIGN CONTENTS .)
    LANGLE          reduce using rule 7 (title -> POUNDSIGN CONTENTS .)
    CONTENTS        reduce using rule 7 (title -> POUNDSIGN CONTENTS .)
    $end            reduce using rule 7 (title -> POUNDSIGN CONTENTS .)


state 23

    (25) sentences -> LBRACKET sentences . RBRACKET LPAREN sentences RPAREN

    RBRACKET        shift and go to state 38


state 24

    (17) paragraph -> paragraph LANGLE .
    (26) sentences -> LANGLE . sentences RANGLE
    (22) sentences -> . LATICS sentences LATICS
    (23) sentences -> . BOLD sentences BOLD
    (24) sentences -> . CODE sentences CODE
    (25) sentences -> . LBRACKET sentences RBRACKET LPAREN sentences RPAREN
    (26) sentences -> . LANGLE sentences RANGLE
    (27) sentences -> . CONTENTS

  ! shift/reduce conflict for LATICS resolved as shift
  ! shift/reduce conflict for BOLD resolved as shift
  ! shift/reduce conflict for CODE resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for LANGLE resolved as shift
  ! shift/reduce conflict for CONTENTS resolved as shift
    RBRACKET        reduce using rule 17 (paragraph -> paragraph LANGLE .)
    LPAREN          reduce using rule 17 (paragraph -> paragraph LANGLE .)
    RPAREN          reduce using rule 17 (paragraph -> paragraph LANGLE .)
    RANGLE          reduce using rule 17 (paragraph -> paragraph LANGLE .)
    POUNDSIGN       reduce using rule 17 (paragraph -> paragraph LANGLE .)
    SEPARATOR       reduce using rule 17 (paragraph -> paragraph LANGLE .)
    NEWLINE         reduce using rule 17 (paragraph -> paragraph LANGLE .)
    TAB             reduce using rule 17 (paragraph -> paragraph LANGLE .)
    $end            reduce using rule 17 (paragraph -> paragraph LANGLE .)
    LATICS          shift and go to state 5
    BOLD            shift and go to state 18
    CODE            shift and go to state 7
    LBRACKET        shift and go to state 10
    LANGLE          shift and go to state 4
    CONTENTS        shift and go to state 17

  ! LBRACKET        [ reduce using rule 17 (paragraph -> paragraph LANGLE .) ]
  ! LANGLE          [ reduce using rule 17 (paragraph -> paragraph LANGLE .) ]
  ! LATICS          [ reduce using rule 17 (paragraph -> paragraph LANGLE .) ]
  ! BOLD            [ reduce using rule 17 (paragraph -> paragraph LANGLE .) ]
  ! CODE            [ reduce using rule 17 (paragraph -> paragraph LANGLE .) ]
  ! CONTENTS        [ reduce using rule 17 (paragraph -> paragraph LANGLE .) ]

    sentences                      shift and go to state 19

state 25

    (16) paragraph -> paragraph RPAREN .

    LBRACKET        reduce using rule 16 (paragraph -> paragraph RPAREN .)
    RBRACKET        reduce using rule 16 (paragraph -> paragraph RPAREN .)
    LPAREN          reduce using rule 16 (paragraph -> paragraph RPAREN .)
    RPAREN          reduce using rule 16 (paragraph -> paragraph RPAREN .)
    LANGLE          reduce using rule 16 (paragraph -> paragraph RPAREN .)
    RANGLE          reduce using rule 16 (paragraph -> paragraph RPAREN .)
    LATICS          reduce using rule 16 (paragraph -> paragraph RPAREN .)
    BOLD            reduce using rule 16 (paragraph -> paragraph RPAREN .)
    CODE            reduce using rule 16 (paragraph -> paragraph RPAREN .)
    CONTENTS        reduce using rule 16 (paragraph -> paragraph RPAREN .)
    POUNDSIGN       reduce using rule 16 (paragraph -> paragraph RPAREN .)
    SEPARATOR       reduce using rule 16 (paragraph -> paragraph RPAREN .)
    NEWLINE         reduce using rule 16 (paragraph -> paragraph RPAREN .)
    TAB             reduce using rule 16 (paragraph -> paragraph RPAREN .)
    $end            reduce using rule 16 (paragraph -> paragraph RPAREN .)


state 26

    (20) paragraph -> paragraph BOLD .
    (23) sentences -> BOLD . sentences BOLD
    (22) sentences -> . LATICS sentences LATICS
    (23) sentences -> . BOLD sentences BOLD
    (24) sentences -> . CODE sentences CODE
    (25) sentences -> . LBRACKET sentences RBRACKET LPAREN sentences RPAREN
    (26) sentences -> . LANGLE sentences RANGLE
    (27) sentences -> . CONTENTS

  ! shift/reduce conflict for LATICS resolved as shift
  ! shift/reduce conflict for BOLD resolved as shift
  ! shift/reduce conflict for CODE resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for LANGLE resolved as shift
  ! shift/reduce conflict for CONTENTS resolved as shift
    RBRACKET        reduce using rule 20 (paragraph -> paragraph BOLD .)
    LPAREN          reduce using rule 20 (paragraph -> paragraph BOLD .)
    RPAREN          reduce using rule 20 (paragraph -> paragraph BOLD .)
    RANGLE          reduce using rule 20 (paragraph -> paragraph BOLD .)
    POUNDSIGN       reduce using rule 20 (paragraph -> paragraph BOLD .)
    SEPARATOR       reduce using rule 20 (paragraph -> paragraph BOLD .)
    NEWLINE         reduce using rule 20 (paragraph -> paragraph BOLD .)
    TAB             reduce using rule 20 (paragraph -> paragraph BOLD .)
    $end            reduce using rule 20 (paragraph -> paragraph BOLD .)
    LATICS          shift and go to state 5
    BOLD            shift and go to state 18
    CODE            shift and go to state 7
    LBRACKET        shift and go to state 10
    LANGLE          shift and go to state 4
    CONTENTS        shift and go to state 17

  ! LBRACKET        [ reduce using rule 20 (paragraph -> paragraph BOLD .) ]
  ! LANGLE          [ reduce using rule 20 (paragraph -> paragraph BOLD .) ]
  ! LATICS          [ reduce using rule 20 (paragraph -> paragraph BOLD .) ]
  ! BOLD            [ reduce using rule 20 (paragraph -> paragraph BOLD .) ]
  ! CODE            [ reduce using rule 20 (paragraph -> paragraph BOLD .) ]
  ! CONTENTS        [ reduce using rule 20 (paragraph -> paragraph BOLD .) ]

    sentences                      shift and go to state 34

state 27

    (21) paragraph -> paragraph CODE .
    (24) sentences -> CODE . sentences CODE
    (22) sentences -> . LATICS sentences LATICS
    (23) sentences -> . BOLD sentences BOLD
    (24) sentences -> . CODE sentences CODE
    (25) sentences -> . LBRACKET sentences RBRACKET LPAREN sentences RPAREN
    (26) sentences -> . LANGLE sentences RANGLE
    (27) sentences -> . CONTENTS

  ! shift/reduce conflict for LATICS resolved as shift
  ! shift/reduce conflict for BOLD resolved as shift
  ! shift/reduce conflict for CODE resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for LANGLE resolved as shift
  ! shift/reduce conflict for CONTENTS resolved as shift
    RBRACKET        reduce using rule 21 (paragraph -> paragraph CODE .)
    LPAREN          reduce using rule 21 (paragraph -> paragraph CODE .)
    RPAREN          reduce using rule 21 (paragraph -> paragraph CODE .)
    RANGLE          reduce using rule 21 (paragraph -> paragraph CODE .)
    POUNDSIGN       reduce using rule 21 (paragraph -> paragraph CODE .)
    SEPARATOR       reduce using rule 21 (paragraph -> paragraph CODE .)
    NEWLINE         reduce using rule 21 (paragraph -> paragraph CODE .)
    TAB             reduce using rule 21 (paragraph -> paragraph CODE .)
    $end            reduce using rule 21 (paragraph -> paragraph CODE .)
    LATICS          shift and go to state 5
    BOLD            shift and go to state 18
    CODE            shift and go to state 7
    LBRACKET        shift and go to state 10
    LANGLE          shift and go to state 4
    CONTENTS        shift and go to state 17

  ! LBRACKET        [ reduce using rule 21 (paragraph -> paragraph CODE .) ]
  ! LANGLE          [ reduce using rule 21 (paragraph -> paragraph CODE .) ]
  ! LATICS          [ reduce using rule 21 (paragraph -> paragraph CODE .) ]
  ! BOLD            [ reduce using rule 21 (paragraph -> paragraph CODE .) ]
  ! CODE            [ reduce using rule 21 (paragraph -> paragraph CODE .) ]
  ! CONTENTS        [ reduce using rule 21 (paragraph -> paragraph CODE .) ]

    sentences                      shift and go to state 21

state 28

    (13) paragraph -> paragraph LBRACKET .
    (25) sentences -> LBRACKET . sentences RBRACKET LPAREN sentences RPAREN
    (22) sentences -> . LATICS sentences LATICS
    (23) sentences -> . BOLD sentences BOLD
    (24) sentences -> . CODE sentences CODE
    (25) sentences -> . LBRACKET sentences RBRACKET LPAREN sentences RPAREN
    (26) sentences -> . LANGLE sentences RANGLE
    (27) sentences -> . CONTENTS
